--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+/*CSS RESET*/
+html, body, div, span, applet, object, iframe,  
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
+a, abbr, acronym, address, big, cite, code,  
+del, dfn, em, img, ins, kbd, q, s, samp,  
+small, strike, strong, sub, sup, tt, var,  
+b, u, i, center,  
+dl, dt, dd, ol, ul, li,  
+fieldset, form, label, legend,  
+table, caption, tbody, tfoot, thead, tr, th, td,  
+article, aside, canvas, details, embed,  
+figure, figcaption, footer, header, hgroup,  
+menu, nav, output, ruby, section, summary,  
+time, mark, audio, video {  
+margin: 0;  
+padding: 0;  
+border: 0;  
+font-size: 100%;  
+font: inherit;  
+vertical-align: baseline;  
+}
+/*GENERAL STYLES*/
+html{
+    font-size:62.5%;
+}
+body{
+    font-size:1.6rem;
+    line-height: 1.5;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+:root {
+  --blue: #838DEC;
+  --lBlue: #B8BEF4;
+
+  --antiqueRuby: #8D162E;
+  --aeroBlue: #CEF2D9;
+  --viridianGreen: #14A3A1;
+  --richBlack: #063736;
+
+  --text: #EDFDFC;
+}
+img {
+  width: auto;
+  height: 60%;
+  box-shadow: 5px 13px 50px 5px black;
+  margin: 3%;
+  border-radius: 2%;
+  filter: brightness(100%);
+}
+
+
+h1{
+    font-size:6rem;
+    margin:0;
+}
+a {	
+    text-decoration: none;	
+    color: black;
+    font-size:2.5rem;	
+}	
+a:hover {	
+    font-weight: bold;	
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
